fix screen overflow when resizing browser window

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,7 +9,8 @@ $font-size: 62.5%; // 10px app / 16px default browser
 
 $background-width: 1380px; //rem
 
-$responsive-width-breakpoints : (1370px: 0.9, 1230px: 0.8, 1100px: 0.7, 960px: 0.6, 820px: 0.5, 690px: 0.4);
+//$responsive-width-breakpoints : (1370px: 0.9, 1230px: 0.8, 1100px: 0.7, 960px: 0.6, 820px: 0.5, 690px: 0.4);
+$responsive-width-breakpoints : (1370px: 0.5, 690px: 0.4);
 
 $header-width: 37.8; //rem
 $health-gauge-width: 3.8; //rem
